--- a/.github/workflows/zhongmiddleliumeiti.yml
+++ b/.github/workflows/zhongmiddleliumeiti.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '6 3/6 * * *'
-jobs:
+jobs:  # 9705
   build:
     runs-on: ubuntu-latest
     steps:
